# dreamfactory-v2

./: .gitignore  2025-11-24_log.md  DreamFactory v2.1 Development Specification (Expanded).md  DreamFactory v2.1 Hybrid Architecture.md  Expanded_DreamFactory_v2.1_Spec.md  eslint.config.mjs  implementation1123.md  package-lock.json  package.json  walkthrough.md
backend/: README.md  inspect_client.py  inspect_operations.py  inspect_types.py  main.py  pyproject.toml  requirements.txt
backend/agents/: artist.py  artist_agent.py  director.py  director_agent.py  director_worker.py  orchestrator.py  router_agent.py  supervisor_agent.py  writer.py  writer_agent.py
backend/api/: routes.py
backend/data/: db.json
backend/services/: agent_framework.py  veo_service.py
backend/static/: index.html
backend/tools/: artist_tools.py  delegation_tools.py  director_tools.py  writer_tools.py
backend/utils/: firebase_config.py  firestore_helpers.py  local_db.py  local_file_store.py
scripts/: test-agents.ts  test-key.ts
src/agents/: artist.ts  director.ts  writer.ts
src/app/: globals.css  page.tsx
src/app/dashboard/: page.tsx
src/components/: ProjectInput.tsx  PromptForm.tsx  StepIndicator.tsx  icons.tsx
src/components/preview/: MoviePlayer.tsx
src/lib/firebase/: admin.ts
src/providers/: CollaborationProvider.tsx
src/types/: flow.ts
veo-studio/: index.html  metadata.json  package-lock.json  package.json
veo-studio/src/: App.tsx  AppExam.tsx  firebaseConfig.ts  index.css  types.ts  vite-env.d.ts
veo-studio/src/components/: AgentTabs.tsx  AlertModal.tsx  (+16 more)
(+16 files in other folders)
